force-app/main/default/objects/Account/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <label>Название банка</label>
    <type>TextArea</type>
</CustomField>