force-app/main/default/objects/Account/fields/FullNameOrg__c.field-meta.xml
<CustomField>
    <fullName>FullNameOrg__c</fullName>
    <label>Полное название предприятия</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>